--- a/LabB52-Najlla -2021000694)/lab-01/session/tutorial/index.html
+++ b/LabB52-Najlla -2021000694)/lab-01/session/tutorial/index.html
@@ -2,57 +2,66 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CMPS 350 B52</title>
+  <title>Title</title>
 </head>
 <body>
-<h1 id="first">Jane Doe</h1>
-<a href="http://janedoe.com">Website</a>
-<a href="mailto:janedoe@mail.com">Email</a>
-<img src="images/w3schools.jpg" alt="Logo of W3Schools.com" width="156" height="213"/>
-<button>Switch theme</button>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br/>
-  Nunc sit amet ullamcorper massa. <br/>
-  Vivamus non accumsan nisl. <br/> Nam lectus odio, sollicitudin eget nisi eu, porta tincidunt metus. Phasellus vitae
-  massa ac libero ornare dignissim non sed ligula. Sed accumsan nulla velit, vel euismod nibh ullamcorper nec. Maecenas
-  id quam sollicitudin, mollis tellus eget, posuere risus. Fusce quis lobortis enim. Integer non sodales leo, sit amet
-  tempus sapien. Integer vitae diam justo. Nam congue, dui quis mattis pellentesque, est elit auctor arcu, porttitor
-  varius ante nisl eget velit. Donec nec tortor ac leo volutpat mollis. Mauris vitae sodales arcu. Aenean eu purus ac
-  neque rutrum luctus. Maecenas ut velit sodales, blandit diam non, molestie metus. Nam sagittis est ut mollis
-  consectetur. Ut et vulputate mi.</p>
-<h2>Education</h2>
-<h3>BE in Computer Science</h3>
-<ul>
-  <li>CMPS 151 - Concepts</li>
-  <li>CMPS 251 - OOP</li>
-  <li>CMPS 350 - Web</li>
-</ul>
 
-<ol>
-  <li>A</li>
-  <li>B</li>
-  <li>C</li>
-</ol>
+<header >
+  <div>
+    <img src="img/html_logo.png" alt="" width="40" height="40">
+    <h1>Lorem <b>making things bold</b> ipsum dolor sit amet.</h1>
+    <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
+  </div>
+</header>
+<nav>
+  <a href="https://www.google.com">Google</a> &nbsp;
+  <a href="https://www.w3schools.com"/>W3 School</a> &nbsp;
+  <a href="contact-us.html">Contact Us</a>
+</nav>
+<main>
+  <section id="section1">
+    <h2>Section 1 Lorem ipsum dolor sit amet.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, libero?</p>
+  </section>
+  <section>
+    <h2>Section 2 Lorem ipsum dolor sit amet.</h2>
+    <article>
+      <h3>Article 1 Lorem ipsum dolor sit amet.</h3>
+      <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ul>
 
-<hr/>
+      <iframe width="560" height="315"
+              src="https://www.youtube.com/embed/irO8MgLKnaw" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+      <video src="media/china.mp4" width="400" height="300" controls></video>
+      <audio src="media/cannon.mp3" controls></audio>
+    </article>
+  </section>
+  <section>
+    <h2>Section 3 Lorem ipsum dolor sit amet.</h2>
+    <article>
+      <h3>Article 2 Lorem ipsum dolor sit amet.</h3>
+      <ol>
+        <li>Lorem ipsum dolor sit amet. <progress max="100" value="50"></progress></li>
+        <li>Lorem ipsum dolor sit amet. <progress max="100" value="40"></progress></li>
+        <li>Lorem ipsum dolor sit amet. <progress max="100" value="80"></progress></li>
+      </ol>
+    </article>
+  </section>
+</main>
 
-<h2>Experience</h2>
-<ul>
-  <li>Corporation 1</li>
-  <li>Corporation 2</li>
-  <li>Corporation 3</li>
-  <li>Corporation 4</li>
-</ul>
-<h2>Certificates</h2>
+<aside>
+  <p><mark>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</mark></p>
+</aside>
 
-<h2>Volunteering</h2>
-
-<pre>
-   My Bonnie lies over the ocean.
-   My Bonnie lies over the sea.
-   My Bonnie lies over the ocean.
-   Oh, bring back my Bonnie to me.
-</pre>
-
-<a href="#first">Go to top</a>
+<footer>
+  <p>&copy;2022 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, omnis! </p>
+</footer>
 </body>
 </html>
