add-fixed the content

--- a/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/home.html
+++ b/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
           integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link href="main.css" rel="stylesheet">
+    <link href="Css/main.css" rel="stylesheet">
 
 
 </head>
@@ -20,10 +20,10 @@
 <body>
 <div class="container">
     <header>
-        <a class="site-identity" href="home.html"><img src="2.png" style="height: 50px;" alt="Site Name"/></a>
+        <a class="site-identity" href="home.html"><img src="images/2.png" style="height: 50px;" alt="Site Name"/></a>
         <nav>
             <ul class="menu_large">
-                <li><a href="home.html">About Najla</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="blog.html">Blogs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -72,8 +72,8 @@
                     <div class="post_content">
                         <h5>Chal and innovation forum</h5>
                         <span>2021</span><span>|</span><span> Event Expert, Media Coordinator </span>
-                        <p>My experience is in the field of  media, volunteering, planning and Event Expert,
-                           </p>
+                        <p>My experience is in the field of media, volunteering, planning and Event Expert,
+                        </p>
                     </div>
                 </div>
             </div>
@@ -91,16 +91,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="right_content">
-                            <h5>Designing Responsive Layouts</h5>
+                            <h5>Graduated in Fall </h5>
                             <span class="badge">2022</span>
                             <span class="category">Dashboard</span>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum has been the industry's standard dummy
-                                text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and
-                                typesetting industry.
-                                Lorem Ipsum has been the industry's standard dummy
-                                text ever since the 1500s the industry's standard dummy
-                                text ever since the 1500s</p>
+                            <p> in Fall 2022 Every Dream will come ture</p>
                         </div>
                     </div>
                 </div>
