--- a/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/contact.html
+++ b/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/contact.html
@@ -4,96 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Najla Almuhannadi|Personal Blog</title>
+    <title>Najla Almuhannadi Blog </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="main.css" rel="stylesheet">
+    <link href="Css/main.css" rel="stylesheet">
    </head>
 <body>
-  <!-- <div class="container">
-    <div class="content">
-      <div class="left-side">
-        <div class="userimage">
-            <img src="avatar.png" alt="Avatar">
-
-        </div>
-
-        <div class="email details">
-          <h3> Contact</h3>
-          <aside>
-            <div class="email">abdullah@ui.com</div>
-          </aside>
-          </div>
-
-        <div class="address details">
-          <h3>Based in</h3>
-          <p>Doha, Qatar</p>
-        </div>
-
-        <div class="socail-icons">
-          <i class="fa-brands fa-facebook"></i>    
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-twitter"></i>
-            </div>
-    </div>
-
-      <div class="right-side">
-        <h1>Contact Me</h1>
-      
-      <form action="#" class="form">
-        <div class="input-box">
-          <label>Full Name</label>
-          <input type="text">
-        </div> <br>
-        <div class="input-box">
-          <label>Email</label>
-          <input type="text">
-        </div> <br>
-
-
-        <div class="input-box message-box">
-           <label>Message</label>
-          <input type="text">
-        </div> <br>
-
-        <div class="button">
-          <input type="button" value="Send" >
-        </div>
-      </form>
-    </div>
-    </div>
-  </div> -->
 
 <header>
-    <a class="site-identity" href="home.html"><img src="logo.png" style="height: 50px;" alt="Site Name" /></a>
+    <a class="site-identity" href="home.html"><img src="images/2.png" style="height: 50px;" alt="Site Name" /></a>
     <nav>
       <ul class="menu_large">
           <li> <a href="home.html">Works</a></li>
           <li> <a href="blog.html">Blogs</a></li>
-          <li> <a href="contact.html">Contact</a></li>
+          <li> <a href="contact.html">Contact Us</a></li>
       </ul>
       <button class="toggle"><i class="fas fa-bars"></i></button>
     </nav>
 
 </header>
 
-
-
 <section class="contact_section">
   <div class="container">
     <div class="row">
       <div class="col-md-4">
         <div class="left_content">
-          <img src="images/avatar.jpeg" />
+          <img src="images/2.png ">
           <h4>Contact</h4>
-          <p>abdullahi@qu.edu.qa</p>
+          <p>Na1000694@qu.edu.qa</p>
           <h4>Based In</h4>
-          <p>Doha, Qatar</p>
+          <p>Doha , Qatar</p>
           <a href="#"><i class="fab fa-facebook-square"></i></a>
           <a href="#"><i class="fab fa-instagram-square"></i></a>
           <a href="#"><i class="fab fa-twitter-square"></i></a>
+          <p> @najlakalm</p>
         </div>
       </div> 
       <div class="col-md-8">
