Final -Ass Done

--- a/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/blog.html
+++ b/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/blog.html
@@ -20,12 +20,12 @@
 <body>
 <div class="container">
     <header>
-        <a class="site-identity" href="home.html"><img src="logo.png" style="height: 50px;" alt="Site Name"/></a>
+        <a class="site-identity" href="home.html"><img src="images/2.png" style="height: 50px;" alt="Site Name"/></a>
         <nav>
             <ul class="menu_large">
-                <li><a href="home.html">Works</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact US</a></li>
             </ul>
             <button class="toggle"><i class="fas fa-bars"></i></button>
         </nav>
@@ -33,64 +33,50 @@
     </header>
     <section class="blog_section">
         <div class="container">
-            <h4>Blog</h4>
+            <h4>Najla Blog </h4>
             <div class="row">
                 <div class="col-md-6">
                     <div class="main_content">
                         <h5>Graphic Designer </h5>
                         <span> 2020</span>
                         <span>|</span>
-                        <span class="category">Design, Css</span>
-                        <img src="images/2650149.jpg.jpg"/>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy
-                            text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                            Lorem Ipsum has been the industry's.</p>
+                        <span class="category">Design, PSd,Ai,Id,Canva</span>
+                        <img src="images/2516.jpg"/>
+                        <p>Desing is the way that help me to describe my creative ideas </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="main_content">
-                        <h5>10 Great Benefits of Responsive Website Design</h5>
-                        <span>04 Feb 2020</span>
+                        <h5>12 Years volunteering </h5>
+                        <span>2010 -2022</span>
                         <span>|</span>
-                        <span class="">Design, Css</span>
-                        <img src="images/featured.jpg"/>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy
-                            text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                            Lorem Ipsum has been the industry's.</p>
+                        <span class="">Social </span>
+                        <img src="images/6660.jpg"/>
+                        <p>Volunteer is another life to find your self and developed </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="main_content">
-                        <h5>10 Great Benefits of Responsive Website Design</h5>
-                        <span>04 Feb 2020</span>
+                        <h5>Social media Expert - Marketing </h5>
+                        <span> 2020 -2022</span>
                         <span>|</span>
-                        <span class="category">Design, Css</span>
-                        <img src="images/featured.jpg"/>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy
-                            text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                            Lorem Ipsum has been the industry's.</p>
+                        <span class="category">Media - Marketing </span>
+                        <img src="images/media.jpg"/>
+                        <p>I spend 2 years in Media Department that help me alot to find my interest  </p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="main_content">
-                        <h5>10 Great Benefits of Responsive Website Design</h5>
+                        <h5>Event Planner</h5>
                         <span>04 Feb 2020</span>
                         <span>|</span>
-                        <span class="">Design, Css</span>
-                        <img src="images/featured.jpg"/>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy
-                            text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and typesetting
-                            industry.
-                            Lorem Ipsum has been the industry's.</p>
+                        <span class="">planning/ quality Sector</span>
+                        <img src="images/palnning.jpg"/>
+                        <p> Make plan for day its Easy ..
+                            But making planning for 1 Year its more challenging
+                           </p>
                     </div>
                 </div>
             </div>
@@ -104,7 +90,7 @@
             <a href="#"><i class="fab fa-instagram-square"></i></a>
             <a href="#"><i class="fab fa-twitter-square"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            <p>Copyright © 2020 All rights Reserved</p>
+            <p>Copyright © 2022 All rights Reserved @NajlaAlmuhannadi</p>
         </div>
     </footer>
 </div>
