--- a/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/home.html
+++ b/LabB52-Najlla -2021000694)/Najla Almuhannadi -Assgment 1/home.html
@@ -25,7 +25,7 @@
             <ul class="menu_large">
                 <li><a href="home.html">Home</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <button class="toggle"><i class="fas fa-bars"></i></button>
         </nav>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="post_content">
-                        <h5>Chal and innovation forum</h5>
+                        <h5>creative and innovation forum</h5>
                         <span>2021</span><span>|</span><span> Event Expert, Media Coordinator </span>
                         <p>My experience is in the field of media, volunteering, planning and Event Expert,
                         </p>
@@ -94,7 +94,7 @@
                             <h5>Graduated in Fall </h5>
                             <span class="badge">2022</span>
                             <span class="category">Dashboard</span>
-                            <p> in Fall 2022 Every Dream will come ture</p>
+                            <p> in Fall 2022 Every Dream become ture</p>
                         </div>
                     </div>
                 </div>
@@ -106,16 +106,11 @@
                     </div>
                     <div class="col-md-8">
                         <div class="right_content">
-                            <h5>Designing Responsive Layouts</h5>
+                            <h5>Some Hopes: photograhy - Padel Player  </h5>
                             <span class="badge">2022</span>
                             <span class="category">Dashboard</span>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                Lorem Ipsum has been the industry's standard dummy
-                                text ever since the 1500s Lorem Ipsum is simply dummy text of the printing and
-                                typesetting industry.
-                                Lorem Ipsum has been the industry's standard dummy
-                                text ever since the 1500s the industry's standard dummy
-                                text ever since the 1500s</p>
+                            <p> This Year is my sport Year, i will make some change in my life
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -129,7 +124,7 @@
             <a href="#"><i class="fab fa-instagram-square"></i></a>
             <a href="#"><i class="fab fa-twitter-square"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
-            <p>Copyright © 2022 All rights Reserved Najla Almuhannadi</p>
+            <p>Copyright © 2022 All rights Reserved @NajlaAlmuhannadi</p>
         </div>
     </footer>
 </div>
