--- a/labs/lab08/session/exercise01/index.html
+++ b/labs/lab08/session/exercise01/index.html
@@ -14,11 +14,10 @@
 
   <body>
     <div class="wrapper">
-      <h1 class="page-header">2022 World Population by Census</h1>
-      <h2>Add A Census</h2>
+      <h1 class="page-header">CMPS 350</h1>
 
       <form class="form" id="form" action="#">
-        <label for="country">Census Name </label>
+        <label for="quotes">Quotes  </label>
         <input
           name="id"
           id="id"
@@ -26,7 +25,7 @@
           type="text"
           value=""
         />
-        <input type="text" id="country" name="country" required />
+        <input type="text" id="quotes" name="country" required />
 
         <label for="population">Population Size </label>
         <input type="number" id="population" name="population" required />
